# Glimpse

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: BuildBoost.cmake
example/: cat_3_0.fits  config.ini  config3d.ini
html/: index.html  index.js
src/: density_reconstruction.cpp  density_reconstruction.h  field.cpp  field.h  glimpse.cpp  redshift_distribution.cpp  redshift_distribution.h  spg.cpp  spg.cu  spg.cuh  surface_reconstruction.cpp  surface_reconstruction.h  survey.cpp  survey.h  wavelet_transform.cpp  wavelet_transform.h
utils/: convert_data_file.py
